implements AUDIT Step 01 APIs
