# workspace/03.ofb.audit.services/sboot-atom-ofb-audit-tracking/src/main/resources/openapi/server/openapi-atom-audit-tracking-server.1.0.0.yaml
@@ -19,56 +19,32 @@ paths:
     get:
       tags:
         - audit.tracking.resources
-      summary: 'Get all oauth2 registered clients'
-      description: 'Get all oauth2 registered clients'
+      summary: 'Get all Audit registers'
+      description: 'Get all Audit registers'
       operationId: getFindAll
       parameters: []
       responses:
         '200':
-          $ref: '#/components/responses/OAuth2ClientResponseList'
-        '400':
-          $ref: '#/components/responses/ResponseCode400Template'
-        '401':
-          $ref: '#/components/responses/ResponseCode401Template'
-        '403':
-          $ref: '#/components/responses/ResponseCode403Template'
-        '404':
-          $ref: '#/components/responses/ResponseCode404Template'
-        '500':
-          $ref: '#/components/responses/ResponseCode500Template'
-        default:
-          $ref: '#/components/responses/ResponseCodeDefaultTemplate'
+          $ref: '#/components/responses/AuditResponseList'
   /audit/findById:
     get:
       tags:
         - audit.tracking.resources
-      summary: 'Get a registered client in oauth2 by ID (ID is the UUID of a client)'
-      description: 'Get a registered client in oauth2 by ID (ID is the UUID of a client)'
+      summary: 'Get a Audit register by ID'
+      description: 'Get a Audit register by ID'
       operationId: getFindById
       parameters:
-        - name: registeredId
-          $ref: '#/components/parameters/OAuth2RegisteredId'
+        - name: auditId
+          $ref: '#/components/parameters/AuditId'
       responses:
         '200':
-          $ref: '#/components/responses/OAuth2ClientResponse'
-        '400':
-          $ref: '#/components/responses/ResponseCode400Template'
-        '401':
-          $ref: '#/components/responses/ResponseCode401Template'
-        '403':
-          $ref: '#/components/responses/ResponseCode403Template'
-        '404':
-          $ref: '#/components/responses/ResponseCode404Template'
-        '500':
-          $ref: '#/components/responses/ResponseCode500Template'
-        default:
-          $ref: '#/components/responses/ResponseCodeDefaultTemplate'
+          $ref: '#/components/responses/AuditResponse'
   /audit/findByPageable:
     get:
       tags:
         - audit.tracking.resources
-      summary: 'Get oauth2 registered clients by Pageable'
-      description: 'Get oauth2 registered clients by Pageable'
+      summary: 'Get Audit registers by Pageable'
+      description: 'Get Audit registers by Pageable'
       operationId: getFindByPageable
       parameters:
         - name: pageNumber
@@ -81,25 +57,13 @@ paths:
           $ref: '#/components/parameters/PageSortOrder'
       responses:
         '200':
-          $ref: '#/components/responses/OAuth2ClientsResponsePageable'
-        '400':
-          $ref: '#/components/responses/ResponseCode400Template'
-        '401':
-          $ref: '#/components/responses/ResponseCode401Template'
-        '403':
-          $ref: '#/components/responses/ResponseCode403Template'
-        '404':
-          $ref: '#/components/responses/ResponseCode404Template'
-        '500':
-          $ref: '#/components/responses/ResponseCode500Template'
-        default:
-          $ref: '#/components/responses/ResponseCodeDefaultTemplate'
+          $ref: '#/components/responses/AuditResponsePageable'
   /audit/findByFilters:
     get:
       tags:
         - audit.tracking.resources
-      summary: 'Get oauth2 registered clients by Pageable and F\ilters'
-      description: 'Get oauth2 registered clients by Pageable and Filters'
+      summary: 'Get Audit registers by Pageable and Filters'
+      description: 'Get Audit registers by Pageable and Filters'
       operationId: getFindByFilters
       parameters:
         - name: pageNumber
@@ -110,43 +74,27 @@ paths:
           $ref: '#/components/parameters/PageSortField'
         - name: pageSortOrder
           $ref: '#/components/parameters/PageSortOrder'
-        - name: registeredId
-          $ref: '#/components/parameters/OAuth2RegisteredIdOptional'
-        - name: clientId
-          $ref: '#/components/parameters/OAuth2ClientIdOptional'
-        - name: clientName
-          $ref: '#/components/parameters/OAuth2ClientNameOptional'
-        - name: securityScope
-          $ref: '#/components/parameters/OAuth2SecurityScopesOptional'
+        - name: AuditId
+          $ref: '#/components/parameters/AuditId'
+        - name: xTicketId
+          $ref: '#/components/parameters/XTicketId'
+        - name: xFapiInteractionId
+          $ref: '#/components/parameters/XFapiInteractionId'
+        - name: requestTime
+          $ref: '#/components/parameters/RequestTime'
+        - name: requestURI
+          $ref: '#/components/parameters/RequestURI'
+        - name: requestMethod
+          $ref: '#/components/parameters/RequestMethod'
+        - name: requestUserName
+          $ref: '#/components/parameters/RequestUserName'
       responses:
         '200':
-          $ref: '#/components/responses/OAuth2ClientsResponsePageable'
-        '400':
-          $ref: '#/components/responses/ResponseCode400Template'
-        '401':
-          $ref: '#/components/responses/ResponseCode401Template'
-        '403':
-          $ref: '#/components/responses/ResponseCode403Template'
-        '404':
-          $ref: '#/components/responses/ResponseCode404Template'
-        '500':
-          $ref: '#/components/responses/ResponseCode500Template'
-        default:
-          $ref: '#/components/responses/ResponseCodeDefaultTemplate'
+          $ref: '#/components/responses/AuditResponsePageable'
 components:
   parameters:
-    OAuth2RegisteredId:
-      name: registeredId
-      description: 'OAuth2 Registered Client Id in format UUID. Example: 42a60be9-6483-4ae2-9d0e-887aae23d0a7'
-      in: query
-      required: true
-      schema:
-        type: string
-        minLength: 3
-        maxLength: 36
-        nullable: false
-    OAuth2RegisteredIdOptional:
-      name: registeredId
+    AuditId:
+      name: auditId
       description: 'OAuth2 Registered Client Id in format UUID. Example: 42a60be9-6483-4ae2-9d0e-887aae23d0a7'
       in: query
       required: false
@@ -155,17 +103,17 @@ components:
         minLength: 3
         maxLength: 36
         nullable: true
-    OAuth2ClientId:
-      name: clientId
+    XTicketId:
+      name: xTicketIdId
       in: query
-      required: true
+      required: false
       schema:
         type: string
         minLength: 3
         maxLength: 50
         nullable: false
-    OAuth2ClientIdOptional:
-      name: clientId
+    XFapiInteractionId:
+      name: xFapiInteractionId
       in: query
       required: false
       schema:
@@ -173,27 +121,27 @@ components:
         minLength: 3
         maxLength: 50
         nullable: true
-    OAuth2ClientName:
-      name: clientName
+    RequestTime:
+      name: requestTimeName
       in: query
-      required: true
+      required: false
       schema:
         type: string
         minLength: 3
         maxLength: 50
         nullable: false
-    OAuth2ClientDocument:
-      name: clientDocument
+    RequestURI:
+      name: requestURI
       description: 'OAuth2 Client Document. Example: Client CNPJ'
       in: query
-      required: true
+      required: false
       schema:
         type: string
         minLength: 1
         maxLength: 50
         nullable: false
-    OAuth2ClientNameOptional:
-      name: clientName
+    RequestMethod:
+      name: requestMethod
       in: query
       required: false
       schema:
@@ -201,24 +149,15 @@ components:
         minLength: 3
         maxLength: 50
         nullable: true
-    OAuth2SecurityScopes:
-      name: securityScope
+    RequestUserName:
+      name: requestUserName
       description: 'Required is: client.admin or client.ofb.read or client.write'
-      in: query
-      required: true
-      schema:
-        type: string
-        pattern: '(client.admin|client.root|client.ofb.read|client.ofb.write)'
-        nullable: false
-    OAuth2SecurityScopesOptional:
-      name: securityScope
-      description: 'Required is: client.admin or client.ofb.read or client.ofb.write or Empty Value'
       in: query
       required: false
       schema:
         type: string
         pattern: '(client.admin|client.root|client.ofb.read|client.ofb.write)'
-        nullable: true
+        nullable: false
     PageNumber:
       name: pageNumber
       in: query
@@ -250,7 +189,7 @@ components:
       required: false
       schema:
         type: string
-        pattern: '(id|clientId|clientName|scopes)'
+        pattern: '(id|xTicketId|xFapiInteractionId)'
         default: 'id'
         nullable: true
     PageSortOrder:
@@ -264,85 +203,50 @@ components:
         default: 'ASC'
         nullable: true
   schemas:
-    OAuth2ClientResponse:
+    AuditResponse:
       type: object
-      description: 'OAuth2 Client Response'
+      description: 'Audit Response'
       properties:
-        registeredId:
+        id:
           type: string
-          description: 'Registered Client Id in format UUID'
-        document:
+          description: 'Audit internal Id'
+        createAt:
           type: string
-          description: 'Client document number'
-        clientId:
+          description: 'Create At'
+        xTicketId:
           type: string
-          description: 'Client id alias'
-        clientIdIssuedAt:
+          description: 'xTicketId key'
+        xFapiInteractionId:
           type: string
-          description: 'Create Date'
-          example: "2025-04-07T19:59:33.127Z"
-        clientSecretExpiresAt:
+          description: 'xFapiInteractionId key'
+        requestTime:
           type: string
-          description: 'Expired Date'
-          example: "2025-04-07T19:59:33.127Z"
-        clientName:
+          description: 'Request DateTime'
+        requestURI:
           type: string
-          description: 'Client name'
+          description: 'Request URI'
+        requestMethod:
+          type: string
+          description: 'Request Method'
           example: "string"
-        clientAuthenticationMethods:
+        requestUserName:
           type: string
-          description: 'Authentication Methods'
+          description: 'Request UserName'
           example: "string"
-        authorizationGrantTypes:
+        payload:
           type: string
-          description: 'Grants Types'
+          description: 'Request PayLoad'
           example: "string"
-        redirectUris:
-          type: string
-          description: 'Redirect URI (if used)'
-          example: "string"
-        securityScope:
-          type: string
-          description: 'Authorization scopes'
-          example: "string"
-        clientSettings:
-          type: string
-          description: 'Client Settings'
-          example: "string"
-        tokenSettings:
-          type: string
-          description: 'Token Settings'
-          example: "string"
-        status:
-          type: string
-          description: 'Acces Status'
-          example: "string"
-        isAccountExpired:
-          type: string
-          description: 'Status of Account'
-          example: 'true'
-        isAccountLocked:
-          type: string
-          description: 'Status of Account'
-          example: 'true'
-        isCredentialsExpired:
-          type: string
-          description: 'Status of Credentials'
-          example: 'true'
-        isEnabled:
-          type: string
-          description: 'Access Status'
-          example: 'true'
-    OAuth2ClientResponseList:
-      description: 'OAuth2 Client Response LIst'
+    AuditResponseList:
+      description: 'AuditResponse LIst'
       type: array
       items:
-        $ref: '#/components/schemas/OAuth2ClientResponse'
-    OAuth2ClientsPageable:
+        $ref: '#/components/schemas/AuditResponse'
+    AuditResponsePageable:
       type: object
       properties:
         content:
-          $ref: '#/components/schemas/OAuth2ClientResponseList'
+          $ref: '#/components/schemas/AuditResponseList'
         pageable:
           $ref: '#/components/schemas/PageableDetailsTemplate'
     PageableDetailsTemplate:
@@ -385,161 +289,25 @@ components:
         totalElementsExisting:
           type: integer
           example: 8899
-    Code200Template:
-      type: object
-      properties:
-        code:
-          type: integer
-          default: 200
-        message:
-          type: string
-          default: 'message description'
-    Code201Template:
-      type: object
-      properties:
-        code:
-          type: integer
-          default: 201
-        message:
-          type: string
-          default: 'message description'
-    Code202Template:
-      type: object
-      properties:
-        code:
-          type: integer
-          default: 202
-        message:
-          type: string
-          default: 'message description'
-    Code400Template:
-      type: object
-      properties:
-        code:
-          type: integer
-          default: 400
-        message:
-          type: string
-          default: 'message description'
-    Code401Template:
-      type: object
-      properties:
-        code:
-          type: integer
-          default: 401
-        message:
-          type: string
-          default: 'message description'
-    Code403Template:
-      type: object
-      properties:
-        code:
-          type: integer
-          default: 403
-        message:
-          type: string
-          default: 'message description'
-    Code404Template:
-      type: object
-      properties:
-        code:
-          type: integer
-          default: 404
-        message:
-          type: string
-          default: 'message description'
-    Code500Template:
-      type: object
-      properties:
-        code:
-          type: integer
-          default: 500
-        message:
-          type: string
-          default: 'message description'
-    CodeDefaultTemplate:
-      type: object
-      properties:
-        code:
-          type: integer
-          default: 501
-        message:
-          type: string
-          default: 'message description'
   responses:
-    OAuth2ClientResponse:
+    AuditResponse:
       description: ''
       content:
         application/json:
           schema:
-            $ref: '#/components/schemas/OAuth2ClientResponse'
-    OAuth2ClientResponseList:
+            $ref: '#/components/schemas/AuditResponse'
+    AuditResponseList:
       description: ''
       content:
         application/json:
           schema:
-            $ref: '#/components/schemas/OAuth2ClientResponseList'
-    OAuth2ClientsResponsePageable:
+            $ref: '#/components/schemas/AuditResponseList'
+    AuditResponsePageable:
       description: 'List of Ticket Records in Pageable options.'
       content:
         application/json:
           schema:
-            $ref: '#/components/schemas/OAuth2ClientsPageable'
-    # Global responses #
-    ResponseCode200Template:
-      description: 'Execution completed successfully.'
-      content:
-        application/json:
-          schema:
-            $ref: '#/components/schemas/Code200Template'
-    ResponseCode201Template:
-      description: 'Execution completed successfully.'
-      content:
-        application/json:
-          schema:
-            $ref: '#/components/schemas/Code201Template'
-    ResponseCode202Template:
-      description: 'Execution completed successfully.'
-      content:
-        application/json:
-          schema:
-            $ref: '#/components/schemas/Code202Template'
-    ResponseCode400Template:
-      description: 'Bad request operation'
-      content:
-        application/json:
-          schema:
-            $ref: '#/components/schemas/Code400Template'
-    ResponseCode401Template:
-      description: 'Unauthorized'
-      content:
-        application/json:
-          schema:
-            $ref: '#/components/schemas/Code401Template'
-    ResponseCode403Template:
-      description: 'Forbidden'
-      content:
-        application/json:
-          schema:
-            $ref: '#/components/schemas/Code403Template'
-    ResponseCode404Template:
-      description: 'Path or object not found'
-      content:
-        application/json:
-          schema:
-            $ref: '#/components/schemas/Code404Template'
-    ResponseCode500Template:
-      description: 'Internal Server Error'
-      content:
-        application/json:
-          schema:
-            $ref: '#/components/schemas/Code500Template'
-    ResponseCodeDefaultTemplate:
-      description: 'Not Implemented'
-      content:
-        application/json:
-          schema:
-            $ref: '#/components/schemas/CodeDefaultTemplate'
+            $ref: '#/components/schemas/AuditResponsePageable'
   securitySchemes:
     bearerAuth:
       type: http
